force-app/main/default/objects/PublishingHouse__c/PublishingHouse__c.object-meta.xml
<CustomObject>
    <label>Publishing House</label>
    <nameField>
        <label>Publishing House Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publishing House</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>