force-app/main/default/objects/PublishingHouse__c/fields/HeadquarterCountry__c.field-meta.xml
<CustomField>
    <fullName>HeadquarterCountry__c</fullName>
    <label>Headquarter Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>