force-app/main/default/objects/PublishingHouse__c/fields/PublishingDateofLastReleasedBook__c.field-meta.xml
<CustomField>
    <fullName>PublishingDateofLastReleasedBook__c</fullName>
    <description>Publishing Date of Last Released Book</description>
    <label>Publishing Date of Last Released Book</label>
    <type>Date</type>
</CustomField>