force-app/main/default/objects/PublishingHouse__c/fields/YearOfEstablishment__c.field-meta.xml
<CustomField>
    <fullName>YearOfEstablishment__c</fullName>
    <label>Year of Establishment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>