force-app/main/default/objects/PublishingHouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>HeadquarterCountry__c</columns>
    <columns>YearOfEstablishment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>